# vgi-pii

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pii_worker.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: detect.test  discovery.test  redact.test
tests/: test_engine.py  test_scalars.py  test_tables.py
vgi_pii/: __init__.py  engine.py  meta.py  scalars.py  schema_utils.py  tables.py  worker.py
